45.intelliJ How to use the Database tab

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username=testuser
 spring.datasource.password=testpass
 
+#45.intelliJ How to use the Database tab
