--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,4 +4,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username=testuser
 spring.datasource.password=testpass
 
-#45.intelliJ How to use the Database tab
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=herohe910623@gmail.com
+spring.mail.password=gopuldypnulgphsf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
+
