--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,8 +6,8 @@ spring.datasource.password=testpass
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=herohe910623@gmail.com
-spring.mail.password=gopuldypnulgphsf
+spring.mail.username=developGiJin@gmail.com
+spring.mail.password=iderirgwfblvpnev
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
