52.study/view , thymeleaf variable expression, @EntityGraph

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,6 +7,7 @@ spring.datasource.password=testpass
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=developGiJin@gmail.com
+#password? asd????
 spring.mail.password=iderirgwfblvpnev
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.timeout=5000
